--- a/audio.html
+++ b/audio.html
@@ -96,38 +96,38 @@
                     <div class="card">
                         <img src="IMG-20250411-WA0090.jpg">
                         <h4 >Mannd</h4>
-                        <audio src="music\Bayaan, Hasan Raheem, Rovalio - Maand (Lyrics).mp3" controls></audio>
+                        <audio src="Bayaan, Hasan Raheem, Rovalio - Maand (Lyrics).mp3" controls></audio>
                     </div>
                     <div class="card">
                         <img src="IMG-20250411-WA0095.jpg">
                         <h4>Young Goat</h4>
-                        <audio src="music\Young G.O.A.T (Official Video) Cheema Y  Gur Sidhu  New Punjabi Song 2025.mp3" controls></audio>
+                        <audio src="Young G.O.A.T (Official Video) Cheema Y  Gur Sidhu  New Punjabi Song 2025.mp3" controls></audio>
                     </div>
                     <div class="card">
                         <img src="IMG-20250411-WA0039.jpg">
                         <h4>Passo Bem Solto</h4>
-                        <audio src="music\Altxs - Passo Bem Solto (Lyrics).mp3" controls></audio>
+                        <audio src="Altxs - Passo Bem Solto (Lyrics).mp3" controls></audio>
                     </div>
                     <div class="card">
                         <img src="IMG-20250411-WA0081.jpg
                         ">
                         <h4>Finding Her</h4>
-                        <audio src="music\Finding Her (Official Video) _ Kushagra  Vanshika Kashyap  Bharat  UR Debut.mp3" controls></audio>
+                        <audio src="Finding Her (Official Video) _ Kushagra  Vanshika Kashyap  Bharat  UR Debut.mp3" controls></audio>
                     </div>
                     <div class="card">
                         <img src="IMG-20250411-WA0093.jpg">
                         <h4>CHAL </h4>
-                        <audio src="music\Chal - dabzee, Rishi roy.mp3" controls></audio>
+                        <audio src="Chal - dabzee, Rishi roy.mp3" controls></audio>
                     </div>
                     <div class="card">
                         <img src="IMG-20250411-WA0091.jpg">
                         <h4>Die With A Smile</h4>
-                        <audio src="music\Lady Gaga, Bruno Mars - Die With A Smile (Lyrics).mp3" controls></audio>
+                        <audio src="Lady Gaga, Bruno Mars - Die With A Smile (Lyrics).mp3" controls></audio>
                     </div>
                     <div class="card">
                         <img src="IMG-20250411-WA0085.jpg">
                         <h4>Pal Pal</h4>
-                        <audio src="music\Afusic - Pal Pal with @Talwiinder  (Official Visualiser) Prod. @AliSoomroMusic.mp3" controls></audio>
+                        <audio src="Afusic - Pal Pal with @Talwiinder  (Official Visualiser) Prod. @AliSoomroMusic.mp3" controls></audio>
                     </div>
                 </div>
             </div>
